# predicates

./: pyproject.toml
examples/: attributes.tsv  output.tsv  predicates.tsv  predicates_metakg_querying.ipynb  test.txt
predicates/: attributes.tsv  predicates.py  predicates.tsv  testing_treats.py
tests/: test_predicates.py
