[tool.poetry]
name = "predicates"
version = "0.1.0"
description = ""
authors = ["Sierra Taylor Moxon <sierra.taylor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
biothings-explorer = "^1.1.0"
requests = "^2.26.0"
jsonschema = "^4.3.1"
parse = "^1.19.0"
bmt = "^0.8.1"
jupyter = "^1.0.0"
linkml-runtime = "^1.2.16"
linkml = "^1.2.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
